# homelab-orchestrator

./: .gitignore  README.md
ansible/: site.yml
ansible/group_vars/: all.example.yml
ansible/inventory/: hosts.example.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/caddy/templates/: example.Caddyfile.j2
app/api/: main.py  pyproject.toml
app/immich-pyclient/: main.py  pyproject.toml
app/jellyfin-pyclient/: jellyfin_client.py
app/upbank/: README.md  __init__.py  client.py  database.py  enrich_transactions.py  migrations.py  pyproject.toml  sync.py
app/upbank/models/: __init__.py  account.py  base.py  category.py  maybe.py  tag.py  transaction.py  webhook.py
app/upbank/models/spec/: openapi.json
app/upbank/tests/: conftest.py  test_client.py  test_database.py  test_migrations.py  test_models.py  test_sync.py
docker-compose/immich-ml/: docker-compose.yaml
docker-compose/jellyfin/: docker-compose.yml
docker-compose/open-webui/: docker-compose.yaml
scripts/: import_onepass_data.sh  oops_commit.sh
terraform/: dev.tfvars  example.terraform.tfvars  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/caddy/reverse_proxy/: main.tf  usage.md  variables.tf
terraform/modules/cloudflare/dns/: main.tf  usage.md  variables.tf
terraform/modules/onepassword/: example.variables.tfvars  main.tf  providers.tf  variables.tf
terraform/modules/onepassword/item/: item_schema.md  main.tf  outputs.tf  usage.md  variables.tf  versions.tf
terraform/modules/proxmox/: main.tf  providers.tf
terraform/templates/: hosts.tpl
(+7 files in other folders)
